--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpg" href="/TutiFruti-Logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <title>Tutti Frutti Online</title>
   </head>
   <body>
